tests/errors/parser-too-large-number.spcasmtest
org $99999999999999999999999999999999999999
